1- Small slides improvement

--- a/presentations/1-introduction/references.bib
+++ b/presentations/1-introduction/references.bib
@@ -22,6 +22,16 @@
   url = {https://commons.wikimedia.org/w/index.php?curid=2170282}
 }
 
+@misc{bertolotti2019,
+  author = {Jacopo Bertolotti},
+  title = {Naive Bayes Classifier},
+  year = {2019},
+  note = {CC BY-SA 3.0},
+  url = {https://commons.wikimedia.org/w/index.php?curid=78502801}
+}
+
+Par  — https://twitter.com/j_bertolotti/status/1123268194758811648, CC0, 
+
 @misc{zirguezi2015,
   author = {Original: Alisneaky, Vector: Zirguezi},
   title = {SVM kernel trick: map features to a higher dimensional space to be able to separate classes using a hyperplane},
