2 - More content to the presentation

--- a/presentations/2-neural_networks/references.bib
+++ b/presentations/2-neural_networks/references.bib
@@ -100,3 +100,29 @@
   note = {Source: GitHub},
   url = {https://github.com/ultralytics/ultralytics/issues/189}
 }
+
+@misc{wiso_neural_network,
+  author = {User:Wiso},
+  title = {Neural network example},
+  year = {Public Domain},
+  url = {https://commons.wikimedia.org/w/index.php?curid=5084582},
+}
+
+@ARTICLE{10.3389/fgene.2021.607471,
+  author={Yang, Sijie  and Zhu, Fei  and Ling, Xinghong  and Liu, Quan  and Zhao, Peiyao },
+  title={Intelligent Health Care: Applications of Deep Learning in Computational Medicine},
+  journal={Frontiers in Genetics},
+  volume={12},
+  year={2021},
+  url={https://www.frontiersin.org/journals/genetics/articles/10.3389/fgene.2021.607471},
+  doi={10.3389/fgene.2021.607471},
+  issn={1664-8021},
+}
+
+@misc{oyanedel2023,
+  author = {Vicente Oyanedel M.},
+  title = {Own work},
+  year = {2023},
+  note = {CC BY-SA 4.0},
+  url = {https://commons.wikimedia.org/w/index.php?curid=95810663}
+}
